(ERC-325) Fix overlapping borders of the elements in the navigation bar

--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -65,15 +65,19 @@ $header-media-breakpoint: 800px;
 
     .item + .item {
         margin-left: -1px;
+
+      .navLink {
+        border-left-color: transparent;
+      }
     }
 
     // left and right item border radius
-    .item:first-child > * {
+  .item:first-child, .item:first-child > * {
         border-bottom-left-radius: $border-radius;
         border-top-left-radius: $border-radius;
     }
 
-    .item:last-child > * {
+  .item:last-child, .item:last-child > * {
         border-bottom-right-radius: $border-radius;
         border-top-right-radius: $border-radius;
     }
@@ -113,7 +117,7 @@ $header-media-breakpoint: 800px;
     &,
     &:hover {
         color: white;
-        border-color: $grey-lightest;
+      border: 1px solid $grey-lightest !important;
         background: initial;
     }
 }
